[package]
name = "firezone-ping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4.20"
pnet = "0.33.0"
socket2 = "0.5.1"
tokio = { version = "1.28", features = ["full"] }
crossbeam = "0.8.2"
