[package]
name = "pingers"
version = "0.1.0"
edition = "2021"
authors = ["Wayne Warren"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4.20"
env_logger = "0.5.0"

pnet = "0.33.0"
socket2 = "0.5.1"
tokio = { version = "1.28", features = ["full"] }
crossbeam = "0.8.2"

clap = { version = "4.4.2", features = ["derive"] }
csv = "1.2.2"
serde = { version = "1.0", features = ["derive"] }
